refaktoring prihlasovania, vytvorenie SessionManager, ukladanie konstant do objektu, zaciatok obrazovky so zoznamom otazok

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MTAA FE</string>
+    <string name="user_info_shared_prefs">Session storage</string>
 </resources>
